[GStreamer] Crashes in MediaPlayerPrivateGStreamer::ensureGstGLContext https://bugs.webkit.org/show_bug.cgi?id=204848

Reviewed by Michael Catanzaro.

Make sure the GL video sink uses a valid WebKit shared GL context.

* platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:
(ensureGstGLContext):
(webKitGLVideoSinkProbePlatform):

Canonical link: https://commits.webkit.org/218231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253284 268f45cc-cd09-0410-ab3c-d52691b4dbfc